syntax = "proto3";

package storage.model;
import "google/protobuf/any.proto";

option go_package = "api";

message Key {
  string value = 1;
}

message PutRequest {
    Key key = 1;
    google.protobuf.Any value = 2;
}

message PutResponse {
}

message GetRequest {
    Key key = 1;
}

message GetResponse {
    google.protobuf.Any value = 2;
}

service Storage {
    rpc Put(PutRequest) returns(PutResponse);
    rpc Get(GetRequest) returns(GetResponse);
}